apps/vaultwarden/components/tls/deployment.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  namespace: shikanime
spec:
  template:
    spec:
      containers:
        - name: vaultwarden
          volumeMounts:
            - name: tls
              mountPath: /tls
              readOnly: true
      volumes:
        - name: tls
          secret:
            secretName: vaultwarden-tls
