apps/vaultwarden/components/tls/patch-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vaultwarden
spec:
  template:
    spec:
      containers:
        - name: vaultwarden
          livenessProbe:
            httpGet:
              port: https
              scheme: HTTPS
          ports:
            - name: https
              containerPort: 80
          readinessProbe:
            httpGet:
              port: https
              scheme: HTTPS
          startupProbe:
            httpGet:
              port: https
              scheme: HTTPS
          volumeMounts:
            - name: tls
              mountPath: /etc/ssl/private
              readOnly: true
      volumes:
        - name: tls
          secret:
            items:
              - key: tls.crt
                path: tls.crt
              - key: tls.key
                mode: 640
                path: tls.key
            secretName: vaultwarden-tls
