apps/vaultwarden/components/tls/patch-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
spec:
  ports:
    - name: https
      port: 443
      targetPort: https
