apps/vaultwarden/components/tls/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: shikanime
spec:
  ports:
    - name: https
      port: 443
      targetPort: http
