apps/vaultwarden/components/tls/ingress.patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  namespace: shikanime
spec:
  defaultBackend:
    service:
      name: vaultwarden
      port:
        name: https
